
- Tue Sep 23 2014 (eisler)
  - added new module 44_TEK603 to support the TEK603 Eco Monitor

- Tue Dec 16 2014 (hexenmeister)
  - added new module 42_SMARTMON to support use of smartctl in FHEM
 
- Wed Dec 17 2014 (Reinerlein)
  - added new module 00_SONOS and 21_SONOSPLAYER to support the Sonos Multiroom Audiosystem

- Mon Dec 22 2014 (mattwire)
  - added new module 30_MilightBridge and 31_MilightDevice to support Milight LED lights/strips/controllers.

- Tue Jan 13 2015 (chri1284)
  - added new module 57_CALVIEW
  
- Fri Jan 30 2015 (fhainz)
  - added new module 70_Pushbullet

- Wed Mar 11 2015 (loredo)
  - added new RESIDENTS toolkit functions for RESIDENTS, ROOMMMATE and GUEST devices
    first function: wakeuptimer

- Thu Mar 13 2015 (chris1284)
  - fixed CALVIEW commandref (ms to sec)

- Tue Mar 17 2015 (wzut)
  - added two new modules at contrib/Infratec/* for Infratec Power Modules

- Sat Mar 21 2015 (loredo)
  - reading residentsGuests in module 10_RESIDENTS was renamed to residentsTotalGuests
  - introducing new readings in module 10_RESIDENTS: residentsTotalGuestsAbsent and residentsTotalGuestsPresent

- Sat Apr 25 2015 (risiko)
  - added new modules to support pilight (sending and receiving): switch, dimmer, temperature and humidity

- Mon Aug 17 2015 (rapster)
  - added new module 70_VolumeLink to link the volume-level and mute-state of a physical-device with a fhem-device
  
- Mon Aug 23 2015 (rapster)
  - added new module 74_Unifi for the Ubiquiti Networks (UBNT) - Unifi Controller.

- Wed Oct 21 2015 (sidey)
  - added new module 00_SIGNALduino, 90_SIGNALduino_un, 14_Hideki, 14_SD_WS07

- Thu Nov 3 2015 (loredo)
  - removed deprecated wrapper module 75_MSG.pm. Users will need to replace device definitions by 75_MSGFile.pm or 75_MSGMail.pm respectively.
  - added new FHEM command 'msg' to introduce integrated message routing functionality

- Fri Nov 13 2015 (loredo)
  - added new module 50_HP1000